# openchatroomm

./: .gitignore  DEPLOY_GUIDE.md  README.md  RELEASENOTES.md  setup.py  todo.md
chat-app-backend/: .dockerignore  .gitignore  Dockerfile  debug_start.py  docker-compose.yml  locustfile.py  main.py  prometheus.yml  pyproject.toml  requirements.txt  seed.py
chat-app-backend/app/: api.py  crud.py  database.py  deps.py  minio_service.py  models.py  schemas.py  security.py  services.py  settings.py  spam_filter.py
openchatroom-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
openchatroom-frontend/public/: service-worker.js
openchatroom-frontend/src/: App.jsx  api.js  index.css
