[project]
name = "chat-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "faker>=37.6.0",
    "fastapi>=0.116.1",
    "fastapi-cache2>=0.2.2",
    "itsdangerous>=2.2.0",
    "poetry>=2.1.4",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.35.0",
    "minio (>=7.2.16,<8.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
]

[tool.poetry.group.dev.dependencies]
locust = "^2.39.1"
pip-audit = "^2.9.0"
bandit = "^1.8.6"

